5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4123/executions/1800_2564.log
== TEST (2019-06-06 10:18:58) 
-- CODE:
from numpy import *
gp = array(eval(input()))
gc = array(eval(input()))
v = e = d = i = 0
for i <= size(gp):
	if gp[i]<gc[i]:
		d+=1
	if gp[i]>gc[i]:
		v+=1
	if gp[i]=gc[i]:
		e+=1
-- ERROR:
File "XXXX", line 5
    for i <= size(gp):
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 10:19:28) 
-- CODE:
from numpy import *
gp = array(eval(input()))
gc = array(eval(input()))
v = e = d = i = 0
for i in range(0,len(gp)+1):
	if gp[i]<gc[i]:
		d+=1
	if gp[i]>gc[i]:
		v+=1
	if gp[i]=gc[i]:
		e+=1
-- ERROR:
File "XXXX", line 10
    if gp[i]=gc[i]:
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 10:19:34) 
-- CODE:
from numpy import *
gp = array(eval(input()))
gc = array(eval(input()))
v = e = d = i = 0
for i in range(0,len(gp)+1):
	if gp[i]<gc[i]:
		d+=1
	if gp[i]>gc[i]:
		v+=1
	if gp[i]==gc[i]:
		e+=1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 10:20:04) 
-- CODE:
from numpy import *
gp = array(eval(input()))
gc = array(eval(input()))
v = e = d = i = 0
for i in range(0,len(gp)+1):
	if gp[i]<gc[i]:
		d+=1
	if gp[i]>gc[i]:
		v+=1
	if gp[i]==gc[i]:
		e+=1
g = [v,e,d]
print(g)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 10:20:26) 
-- CODE:
from numpy import *
gp = array(eval(input()))
gc = array(eval(input()))
v = e = d = i = 0
for i in range(0,len(gp)):
	if gp[i]<gc[i]:
		d+=1
	if gp[i]>gc[i]:
		v+=1
	if gp[i]==gc[i]:
		e+=1
g = [v,e,d]
print(g)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 10:20:38) 
-- CODE:
from numpy import *
gp = array(eval(input()))
gc = array(eval(input()))
v = e = d = i = 0
for i in range(0,len(gp)):
	if gp[i]<gc[i]:
		d+=1
	if gp[i]>gc[i]:
		v+=1
	if gp[i]==gc[i]:
		e+=1
g = [v,e,d]
print(g)
-- EXECUTION TIME:
1.12279
-- TEST CASE 1:
---- input:
[2,3,2,4,3,5,3,4,2,3,1,0]
[3,3,1,0,2,3,3,0,1,2,1,1]
---- correct output:
[7 3 2]
---- user output:
[7, 3, 2]
-- TEST CASE 2:
---- input:
[1,2,1,2,1,2,1,2,0]
[3,5,3,3,3,3,3,3,3]
---- correct output:
[0 0 9]
---- user output:
[0, 0, 9]
-- TEST CASE 3:
---- input:
[1,2,2,2,2,1,1,2,2,1,1,2,2]
[0,1,1,1,0,0,0,0,0,0,1,1,1]
---- correct output:
[12 1 0]
---- user output:
[12, 1, 0]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 10:20:59) 
-- CODE:
from numpy import *
gp = array(eval(input()))
gc = array(eval(input()))
v = e = d = i = 0
for i in range(0,len(gp)):
	if gp[i]<gc[i]:
		d+=1
	if gp[i]>gc[i]:
		v+=1
	if gp[i]==gc[i]:
		e+=1
g = array([v,e,d])
print(g)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 10:21:08) 
-- CODE:
from numpy import *
gp = array(eval(input()))
gc = array(eval(input()))
v = e = d = i = 0
for i in range(0,len(gp)):
	if gp[i]<gc[i]:
		d+=1
	if gp[i]>gc[i]:
		v+=1
	if gp[i]==gc[i]:
		e+=1
g = array([v,e,d])
print(g)
-- EXECUTION TIME:
1.15331
-- TEST CASE 1:
---- input:
[2,3,2,4,3,5,3,4,2,3,1,0]
[3,3,1,0,2,3,3,0,1,2,1,1]
---- correct output:
[7 3 2]
---- user output:
[7 3 2]
-- TEST CASE 2:
---- input:
[1,2,1,2,1,2,1,2,0]
[3,5,3,3,3,3,3,3,3]
---- correct output:
[0 0 9]
---- user output:
[0 0 9]
-- TEST CASE 3:
---- input:
[1,2,2,2,2,1,1,2,2,1,1,2,2]
[0,1,1,1,0,0,0,0,0,0,1,1,1]
---- correct output:
[12 1 0]
---- user output:
[12  1  0]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
